--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -117,91 +117,8 @@ $( document ).ready(function() {
   <div class="ui segment raised ">
 
     <!-- Campaign_info: {{Campaign_info}} -->
+    <iframe style="width: 99%; height: 27em;" src="https://fifemon.fnal.gov/monitor/d/otZRzhImk/poms-campaign?from=now-30d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1"> </iframe>
 
-   <table id="campaign" class="ui celled table unstackable">
-        <thead>
-            <tr>
-                <th align="center">Total</th>
-                <th colspan=3 align="center">Active Campaign Stage Jobs </th>
-                <th colspan=3 align="center">Jobs in {{time_range_string}}</th>
-                <th colspan=3 align="center">Stats</th>
-            </tr>
-            <tr>
-                <th>All
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Total_All"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Idle
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Running
-                <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Held
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Total Completed
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Not Located
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Located
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Removed
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Failed
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>%Efficiency
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a>
-                </th>
-                <th>Pending
-                  <!-- <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job" data-tooltip="Pending"> -->
-                  <a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job">
-                     <i style="float: none" class="grey help circle link icon"> </i>
-                  </a>
-                </th>
-            </tr>
-        </thead>
-        {%set column_heads = ['All','Idle','Running','Held','Total Completed','Completed', 'Located', 'Removed','Failed', 'efficiency', 'pending' ] %}
-        <tbody>
-            <tr>
-                {% for k in column_heads %}
-                    {% if k == "efficiency" %}
-                        <td>
-                          <a href="{{pomspath}}/jobs_eff_histo?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{CampaignStage.campaign_stage_id}}_{{k}}">
-                              ...
-                          </a>
-                        </td>
-                    {% elif k == "pending" %}
-                        <td>
-                          <a href="{{pomspath}}/actual_pending_files?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{CampaignStage.campaign_stage_id}}_{{k}}">
-                             ...
-                          </a>
-                        </td>
-                    {% elif k == "All" %}
-                        <td>
-                          <a href="{{pomspath}}/job_table?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{CampaignStage.campaign_stage_id}}_{{k}}">
-                            ...
-                          </a>
-                        </td>
-                    {% elif k %}
-                        <td>
-                          <a href="{{pomspath}}/job_table?campaign_stage_id={{CampaignStage.campaign_stage_id}}&job_status={{k}}&tmin={{tmins}}&tmax={{tmaxs}}&tdays={{tdays}}" id="data_{{CampaignStage.campaign_stage_id}}_{{k|replace(" ","_")}}">
-                             ...
-                          </a>
-                          {%if k == "Idle"%}
-                            &nbsp; &nbsp;
-                            <a href="https://fifemon.fnal.gov/monitor/dashboard/db/why-isnt-my-job-running?var-user={{CampaignStage.experiment}}pro"><i class="grey link treatment icon"></i></a>
-                          {%endif%}
-                         </td>
-                    {%endif%}
-                {% endfor %}
-            </tr>
-        </tbody>
-    </table>
     <script>
         $("#campaign th").attr("style", "padding: 0.3em; border-left: 1; text-align: center;");
     </script>
