--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -117,7 +117,7 @@ $( document ).ready(function() {
   <div class="ui segment raised ">
 
     <!-- Campaign_info: {{Campaign_info}} -->
-    <iframe style="width: 99%; height: 27em;" src="https://fifemon.fnal.gov/monitor/d/otZRzhImk/poms-campaign?from=now-30d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1"> </iframe>
+    <iframe style="width: 99%; height: 27em;" src="https://fifemon.fnal.gov/monitor/d/otZRzhImk/poms-campaign?theme=light&from=now-30d&to=now&var-campaign={{CampaignStage.campaign_stage_id}}&orgId=1"> </iframe>
 
     <script>
         $("#campaign th").attr("style", "padding: 0.3em; border-left: 1; text-align: center;");
