Calendar goes to service-now...

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <a class="item" href="{{pomspath}}/calendar">
+  <a class="item" target="_blank" href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar">
     <b>Calendar</b>
   </a>
 
