--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -28,6 +28,8 @@
         <a class="item" target="_blank" href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar">
           <b>Outage Calendar</b>
         </a>
+    </div>
+    <div class="menu">
         <a class="item" href="{{exp_obj.logbook if exp_obj else '#'}}" target="_blank">{{session_experiment|capitalize}} Logbook</a>
     </div>
     <div class="menu">
